Next Release

- Added the pack-dry-run option, which causes pack operations to only
  populate the pack tables with the list of objects and states to pack,
  but not actually pack.

- Refined the pack algorithm.  It was not removing as many object states
  as it should have.  As a bonus, there is now a method of adapters called
  fill_object_refs(), which could be useful for debugging.  It ensures the
  object_ref table is fully populated.

- Began using zc.buildout for development.

- Increased automated test coverage.

- Fixed KeyError reporting to not trip over a related KeyError while logging.


Version 1.1.1 (2008-12-27)

- Worked around MySQL performance bugs in packing.  Used temporary
  tables and another column in the pack_object table.  The
  other databases may benefit from the optimization as well.

- Applied an optimization using setinputsizes() to the Oracle code,
  bringing write speed back up to where it was in version 1.0.


Version 1.1 (2008-12-19)

- Normalized poll-invalidation patches as Solaris' patch command would not
  accept the current format. The patches now apply with:
  patch -d lib/python/ZODB -p0 < poll-invalidation-1-zodb-3-X-X.patch

- In MySQL, Use DROP TABLE IF EXISTS instead of TRUNCATE to clear 'temp_store'
  because:
  - TRUNCATE has one page of caveats in the MySQL documentation.
  - TEMPORARY TABLEs have half a page of caveats when it comes to
    replication.
  - The end result is that 'temp_store' may not exist on the
    replication slave at the exact same time(s) it exists on the
    master.

- Implemented the database size query in MySQL, based on a patch from
  Kazuhiko Shiozaki.  Thanks!

- Optimized Oracle object retrieval by causing BLOBs to be sent inline
  when possible, based on a patch by Helge Tesdal.  By default, the
  optimization is activated automatically when cx_Oracle 5 is used.

- Updated the storage iterator code to be compatible with ZODB 3.9.